fix: white space in menu_page

--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -637,6 +637,10 @@ footer .footer-links-list .footer-link i {
   left: 0;
 }
 
+.menu-main {
+  background-color: #f4f4f4;
+}
+
 .menu-restaurant-image {
   height: 230px;
   width: 100%;
