--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -13,6 +13,10 @@
     }
 }
 
+.menu-main {
+    background-color: $color-light-grey;
+}
+
 .menu-restaurant-image {
     height: 230px;
     width: 100%;
